# Rust-chatgpt-yt

./: Cargo.toml  README.md
src/: main.rs
