[package]
name = "rust-chatgpt-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
# serde_derive = "1.0.188"
serde_json = "1.0.107"
spinners = "4.1.0"
tokio = { version = "1.32.0", features = ["full"] }
